<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="42dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_stock_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="18dp"
                android:text="@string/hr_china"
                android:textColor="@android:color/black"
                android:textSize="21sp" />

            <TextView
                android:id="@+id/tv_stock_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="8dp"
                android:text="02799.港元"
                android:textColor="@android:color/black"
                android:textSize="12sp" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/mx_light_gray" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_stock_netchange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="18dp"
                android:text="3.650↑"
                android:textColor="@color/colorpicker_red"
                android:textSize="21sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="8dp"
                android:text="+0.030"
                android:textColor="@color/colorpicker_red"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_stock_netchange_ratio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="8dp"
                android:text="+0.83%"
                android:textColor="@color/colorpicker_red"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/mx_light_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_stock_preclose"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="18dp"
            android:layout_weight="1"
            android:text="@string/yesterday_income"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/mx_light_gray" />

        <TextView
            android:id="@+id/tv_stock_open"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="18dp"
            android:layout_weight="1"
            android:maxLines="1"
            android:text="@string/today_open_quotation"
            android:textSize="16sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/mx_light_gray" />

        <TextView
            android:id="@+id/tv_stock_high"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="18dp"
            android:layout_weight="1"
            android:maxLines="1"
            android:text="@string/highest_rise"
            android:textSize="16sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/mx_light_gray" />

        <TextView
            android:id="@+id/tv_stock_low"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="18dp"
            android:layout_weight="1"
            android:maxLines="1"
            android:text="@string/lowest_rise"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>